shipper-core/src/main/java/com/logstash/ConfigParser.java
// Generated from C:\Users\luca\devel\shipper\shipper-core/antlr/Config.g4 by ANTLR 4.9.1

package com.logstash;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ConfigParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INPUT=1, FILTER=2, OUTPUT=3, LBRACE=4, RBRACE=5, LPAREN=6, RPAREN=7, LBRACKET=8, 
		RBRACKET=9, QMARK=10, HASHROCKET=11, GT=12, GE=13, LT=14, LE=15, EQ=16, 
		NEQ=17, BANG=18, COMA=19, IN=20, NOT=21, MATCH=22, NOT_MATCH=23, AND=24, 
		OR=25, XOR=26, NAND=27, IF=28, ELSE=29, STRING=30, REGEX=31, DECIMAL=32, 
		IDENTIFIER=33, WS=34, COMMENT=35;
	public static final int
		RULE_config = 0, RULE_stage_declaration = 1, RULE_stage_definition = 2, 
		RULE_plugin_declaration = 3, RULE_plugin_definition = 4, RULE_plugin_attribute = 5, 
		RULE_plugin_attribute_value = 6, RULE_stage_condition = 7, RULE_logical_expression = 8, 
		RULE_negative_expression = 9, RULE_compare_expression = 10, RULE_in_expression = 11, 
		RULE_match_expression = 12, RULE_rvalue = 13, RULE_fieldref = 14, RULE_fieldref_element = 15, 
		RULE_array = 16, RULE_array_element = 17, RULE_hash = 18, RULE_hash_element = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"config", "stage_declaration", "stage_definition", "plugin_declaration", 
			"plugin_definition", "plugin_attribute", "plugin_attribute_value", "stage_condition", 
			"logical_expression", "negative_expression", "compare_expression", "in_expression", 
			"match_expression", "rvalue", "fieldref", "fieldref_element", "array", 
			"array_element", "hash", "hash_element"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'input'", "'filter'", "'output'", "'{'", "'}'", "'('", "')'", 
			"'['", "']'", "'?'", "'=>'", "'>'", "'>='", "'<'", "'<='", "'=='", "'!='", 
			"'!'", "','", "'in'", "'not'", "'=~'", "'!~'", "'and'", "'or'", "'xor'", 
			"'nand'", "'if'", "'else'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INPUT", "FILTER", "OUTPUT", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
			"LBRACKET", "RBRACKET", "QMARK", "HASHROCKET", "GT", "GE", "LT", "LE", 
			"EQ", "NEQ", "BANG", "COMA", "IN", "NOT", "MATCH", "NOT_MATCH", "AND", 
			"OR", "XOR", "NAND", "IF", "ELSE", "STRING", "REGEX", "DECIMAL", "IDENTIFIER", 
			"WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Config.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ConfigParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ConfigContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ConfigParser.EOF, 0); }
		public List<Stage_declarationContext> stage_declaration() {
			return getRuleContexts(Stage_declarationContext.class);
		}
		public Stage_declarationContext stage_declaration(int i) {
			return getRuleContext(Stage_declarationContext.class,i);
		}
		public ConfigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_config; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).enterConfig(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).exitConfig(this);
		}
	}

	public final ConfigContext config() throws RecognitionException {
		ConfigContext _localctx = new ConfigContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_config);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(40);
				stage_declaration();
				}
				}
				setState(43); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INPUT) | (1L << FILTER) | (1L << OUTPUT))) != 0) );
			setState(45);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stage_declarationContext extends ParserRuleContext {
		public Stage_definitionContext stage_definition() {
			return getRuleContext(Stage_definitionContext.class,0);
		}
		public TerminalNode INPUT() { return getToken(ConfigParser.INPUT, 0); }
		public TerminalNode FILTER() { return getToken(ConfigParser.FILTER, 0); }
		public TerminalNode OUTPUT() { return getToken(ConfigParser.OUTPUT, 0); }
		public Stage_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stage_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).enterStage_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).exitStage_declaration(this);
		}
	}

	public final Stage_declarationContext stage_declaration() throws RecognitionException {
		Stage_declarationContext _localctx = new Stage_declarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stage_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INPUT) | (1L << FILTER) | (1L << OUTPUT))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(48);
			stage_definition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stage_definitionContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(ConfigParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(ConfigParser.RBRACE, 0); }
		public List<Plugin_declarationContext> plugin_declaration() {
			return getRuleContexts(Plugin_declarationContext.class);
		}
		public Plugin_declarationContext plugin_declaration(int i) {
			return getRuleContext(Plugin_declarationContext.class,i);
		}
		public List<Stage_conditionContext> stage_condition() {
			return getRuleContexts(Stage_conditionContext.class);
		}
		public Stage_conditionContext stage_condition(int i) {
			return getRuleContext(Stage_conditionContext.class,i);
		}
		public Stage_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stage_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).enterStage_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).exitStage_definition(this);
		}
	}

	public final Stage_definitionContext stage_definition() throws RecognitionException {
		Stage_definitionContext _localctx = new Stage_definitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stage_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(LBRACE);
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IF || _la==IDENTIFIER) {
				{
				setState(53);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case IDENTIFIER:
					{
					setState(51);
					plugin_declaration();
					}
					break;
				case IF:
					{
					setState(52);
					stage_condition();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(58);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Plugin_declarationContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ConfigParser.IDENTIFIER, 0); }
		public Plugin_definitionContext plugin_definition() {
			return getRuleContext(Plugin_definitionContext.class,0);
		}
		public Plugin_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plugin_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).enterPlugin_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).exitPlugin_declaration(this);
		}
	}

	public final Plugin_declarationContext plugin_declaration() throws RecognitionException {
		Plugin_declarationContext _localctx = new Plugin_declarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_plugin_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(IDENTIFIER);
			setState(61);
			plugin_definition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Plugin_definitionContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(ConfigParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(ConfigParser.RBRACE, 0); }
		public List<Plugin_attributeContext> plugin_attribute() {
			return getRuleContexts(Plugin_attributeContext.class);
		}
		public Plugin_attributeContext plugin_attribute(int i) {
			return getRuleContext(Plugin_attributeContext.class,i);
		}
		public Plugin_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plugin_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).enterPlugin_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).exitPlugin_definition(this);
		}
	}

	public final Plugin_definitionContext plugin_definition() throws RecognitionException {
		Plugin_definitionContext _localctx = new Plugin_definitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_plugin_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(LBRACE);
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(64);
				plugin_attribute();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(70);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Plugin_attributeContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ConfigParser.IDENTIFIER, 0); }
		public TerminalNode HASHROCKET() { return getToken(ConfigParser.HASHROCKET, 0); }
		public Plugin_attribute_valueContext plugin_attribute_value() {
			return getRuleContext(Plugin_attribute_valueContext.class,0);
		}
		public Plugin_attributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plugin_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).enterPlugin_attribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).exitPlugin_attribute(this);
		}
	}

	public final Plugin_attributeContext plugin_attribute() throws RecognitionException {
		Plugin_attributeContext _localctx = new Plugin_attributeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_plugin_attribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(IDENTIFIER);
			setState(73);
			match(HASHROCKET);
			setState(74);
			plugin_attribute_value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Plugin_attribute_valueContext extends ParserRuleContext {
		public Plugin_declarationContext plugin_declaration() {
			return getRuleContext(Plugin_declarationContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(ConfigParser.IDENTIFIER, 0); }
		public TerminalNode STRING() { return getToken(ConfigParser.STRING, 0); }
		public TerminalNode DECIMAL() { return getToken(ConfigParser.DECIMAL, 0); }
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public HashContext hash() {
			return getRuleContext(HashContext.class,0);
		}
		public Plugin_attribute_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plugin_attribute_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).enterPlugin_attribute_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).exitPlugin_attribute_value(this);
		}
	}

	public final Plugin_attribute_valueContext plugin_attribute_value() throws RecognitionException {
		Plugin_attribute_valueContext _localctx = new Plugin_attribute_valueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_plugin_attribute_value);
		try {
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				plugin_declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				match(IDENTIFIER);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(78);
				match(STRING);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(79);
				match(DECIMAL);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(80);
				array();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(81);
				hash();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stage_conditionContext extends ParserRuleContext {
		public List<TerminalNode> IF() { return getTokens(ConfigParser.IF); }
		public TerminalNode IF(int i) {
			return getToken(ConfigParser.IF, i);
		}
		public List<Logical_expressionContext> logical_expression() {
			return getRuleContexts(Logical_expressionContext.class);
		}
		public Logical_expressionContext logical_expression(int i) {
			return getRuleContext(Logical_expressionContext.class,i);
		}
		public List<Stage_definitionContext> stage_definition() {
			return getRuleContexts(Stage_definitionContext.class);
		}
		public Stage_definitionContext stage_definition(int i) {
			return getRuleContext(Stage_definitionContext.class,i);
		}
		public List<TerminalNode> ELSE() { return getTokens(ConfigParser.ELSE); }
		public TerminalNode ELSE(int i) {
			return getToken(ConfigParser.ELSE, i);
		}
		public Stage_conditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stage_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).enterStage_condition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).exitStage_condition(this);
		}
	}

	public final Stage_conditionContext stage_condition() throws RecognitionException {
		Stage_conditionContext _localctx = new Stage_conditionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_stage_condition);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(IF);
			setState(85);
			logical_expression(0);
			setState(86);
			stage_definition();
			setState(94);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(87);
					match(ELSE);
					setState(88);
					match(IF);
					setState(89);
					logical_expression(0);
					setState(90);
					stage_definition();
					}
					} 
				}
				setState(96);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(97);
				match(ELSE);
				setState(98);
				stage_definition();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Logical_expressionContext extends ParserRuleContext {
		public Compare_expressionContext compare_expression() {
			return getRuleContext(Compare_expressionContext.class,0);
		}
		public In_expressionContext in_expression() {
			return getRuleContext(In_expressionContext.class,0);
		}
		public Match_expressionContext match_expression() {
			return getRuleContext(Match_expressionContext.class,0);
		}
		public Negative_expressionContext negative_expression() {
			return getRuleContext(Negative_expressionContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(ConfigParser.LPAREN, 0); }
		public List<Logical_expressionContext> logical_expression() {
			return getRuleContexts(Logical_expressionContext.class);
		}
		public Logical_expressionContext logical_expression(int i) {
			return getRuleContext(Logical_expressionContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(ConfigParser.RPAREN, 0); }
		public RvalueContext rvalue() {
			return getRuleContext(RvalueContext.class,0);
		}
		public TerminalNode AND() { return getToken(ConfigParser.AND, 0); }
		public TerminalNode OR() { return getToken(ConfigParser.OR, 0); }
		public TerminalNode NAND() { return getToken(ConfigParser.NAND, 0); }
		public TerminalNode XOR() { return getToken(ConfigParser.XOR, 0); }
		public Logical_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logical_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).enterLogical_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).exitLogical_expression(this);
		}
	}

	public final Logical_expressionContext logical_expression() throws RecognitionException {
		return logical_expression(0);
	}

	private Logical_expressionContext logical_expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Logical_expressionContext _localctx = new Logical_expressionContext(_ctx, _parentState);
		Logical_expressionContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_logical_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(102);
				compare_expression();
				}
				break;
			case 2:
				{
				setState(103);
				in_expression();
				}
				break;
			case 3:
				{
				setState(104);
				match_expression();
				}
				break;
			case 4:
				{
				setState(105);
				negative_expression();
				}
				break;
			case 5:
				{
				setState(106);
				match(LPAREN);
				setState(107);
				logical_expression(0);
				setState(108);
				match(RPAREN);
				}
				break;
			case 6:
				{
				setState(110);
				rvalue();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(127);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(125);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						_localctx = new Logical_expressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_logical_expression);
						setState(113);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(114);
						match(AND);
						setState(115);
						logical_expression(11);
						}
						break;
					case 2:
						{
						_localctx = new Logical_expressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_logical_expression);
						setState(116);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(117);
						match(OR);
						setState(118);
						logical_expression(10);
						}
						break;
					case 3:
						{
						_localctx = new Logical_expressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_logical_expression);
						setState(119);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(120);
						match(NAND);
						setState(121);
						logical_expression(9);
						}
						break;
					case 4:
						{
						_localctx = new Logical_expressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_logical_expression);
						setState(122);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(123);
						match(XOR);
						setState(124);
						logical_expression(8);
						}
						break;
					}
					} 
				}
				setState(129);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Negative_expressionContext extends ParserRuleContext {
		public TerminalNode BANG() { return getToken(ConfigParser.BANG, 0); }
		public TerminalNode LPAREN() { return getToken(ConfigParser.LPAREN, 0); }
		public Logical_expressionContext logical_expression() {
			return getRuleContext(Logical_expressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(ConfigParser.RPAREN, 0); }
		public Negative_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_negative_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).enterNegative_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).exitNegative_expression(this);
		}
	}

	public final Negative_expressionContext negative_expression() throws RecognitionException {
		Negative_expressionContext _localctx = new Negative_expressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_negative_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(BANG);
			setState(131);
			match(LPAREN);
			setState(132);
			logical_expression(0);
			setState(133);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Compare_expressionContext extends ParserRuleContext {
		public List<RvalueContext> rvalue() {
			return getRuleContexts(RvalueContext.class);
		}
		public RvalueContext rvalue(int i) {
			return getRuleContext(RvalueContext.class,i);
		}
		public TerminalNode GT() { return getToken(ConfigParser.GT, 0); }
		public TerminalNode GE() { return getToken(ConfigParser.GE, 0); }
		public TerminalNode LT() { return getToken(ConfigParser.LT, 0); }
		public TerminalNode LE() { return getToken(ConfigParser.LE, 0); }
		public TerminalNode EQ() { return getToken(ConfigParser.EQ, 0); }
		public TerminalNode NEQ() { return getToken(ConfigParser.NEQ, 0); }
		public Compare_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compare_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).enterCompare_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConfigListener ) ((ConfigListener)listener).exitCompare_expression(this);
		}
	}

